# openapi.json
@@ -1,91 +1,6 @@
 {
   "components": {
     "schemas": {
-      "CreateUserReqBody": {
-        "additionalProperties": false,
-        "properties": {
-          "$schema": {
-            "description": "A URL to the JSON Schema for this object.",
-            "examples": [
-              "https://example.com/schemas/CreateUserReqBody.json"
-            ],
-            "format": "uri",
-            "readOnly": true,
-            "type": "string"
-          },
-          "email": {
-            "description": "user's email address",
-            "examples": [
-              "john.doe@example.com"
-            ],
-            "format": "email",
-            "type": "string"
-          },
-          "name": {
-            "description": "user's full name",
-            "examples": [
-              "John Doe"
-            ],
-            "maxLength": 50,
-            "type": "string"
-          },
-          "password": {
-            "description": "user's password",
-            "examples": [
-              "password123"
-            ],
-            "minLength": 8,
-            "type": "string"
-          },
-          "role": {
-            "description": "user's role",
-            "examples": [
-              "user"
-            ],
-            "type": "string"
-          }
-        },
-        "required": [
-          "name",
-          "role",
-          "email",
-          "password"
-        ],
-        "type": "object"
-      },
-      "CreateUserResBody": {
-        "additionalProperties": false,
-        "properties": {
-          "$schema": {
-            "description": "A URL to the JSON Schema for this object.",
-            "examples": [
-              "https://example.com/schemas/CreateUserResBody.json"
-            ],
-            "format": "uri",
-            "readOnly": true,
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "role": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "email",
-          "role"
-        ],
-        "type": "object"
-      },
       "ErrorDetail": {
         "additionalProperties": false,
         "properties": {
@@ -166,6 +81,169 @@
           }
         },
         "type": "object"
+      },
+      "LoginReqBody": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "https://example.com/schemas/LoginReqBody.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "email": {
+            "examples": [
+              "john.doe@example.com"
+            ],
+            "format": "email",
+            "type": "string"
+          },
+          "password": {
+            "examples": [
+              "password123"
+            ],
+            "minLength": 8,
+            "type": "string"
+          }
+        },
+        "required": [
+          "email",
+          "password"
+        ],
+        "type": "object"
+      },
+      "LoginResBody": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "https://example.com/schemas/LoginResBody.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "accessToken": {
+            "type": "string"
+          },
+          "tokenType": {
+            "type": "string"
+          },
+          "user": {
+            "$ref": "#/components/schemas/UserResBody"
+          }
+        },
+        "required": [
+          "accessToken",
+          "tokenType",
+          "user"
+        ],
+        "type": "object"
+      },
+      "SignupReqBody": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "https://example.com/schemas/SignupReqBody.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "email": {
+            "description": "user's email address",
+            "examples": [
+              "john.doe@example.com"
+            ],
+            "format": "email",
+            "type": "string"
+          },
+          "name": {
+            "description": "user's full name",
+            "examples": [
+              "John Doe"
+            ],
+            "maxLength": 50,
+            "type": "string"
+          },
+          "password": {
+            "description": "user's password",
+            "examples": [
+              "password123"
+            ],
+            "minLength": 8,
+            "type": "string"
+          }
+        },
+        "required": [
+          "name",
+          "email",
+          "password"
+        ],
+        "type": "object"
+      },
+      "SignupResBody": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "https://example.com/schemas/SignupResBody.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "name",
+          "email",
+          "role"
+        ],
+        "type": "object"
+      },
+      "UserResBody": {
+        "additionalProperties": false,
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "name",
+          "role",
+          "email"
+        ],
+        "type": "object"
       }
     },
     "securitySchemes": {
@@ -181,15 +259,15 @@
   },
   "openapi": "3.1.0",
   "paths": {
-    "/users": {
+    "/auth/login": {
       "post": {
-        "description": "Create a new user account with email and password.",
-        "operationId": "create-user",
+        "description": "Login with email and password.",
+        "operationId": "login",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateUserReqBody"
+                "$ref": "#/components/schemas/LoginReqBody"
               }
             }
           },
@@ -200,7 +278,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/CreateUserResBody"
+                  "$ref": "#/components/schemas/LoginResBody"
                 }
               }
             },
@@ -217,9 +295,51 @@
             "description": "Error"
           }
         },
-        "summary": "Create a new user",
+        "summary": "Login",
         "tags": [
-          "Users"
+          "Auth"
+        ]
+      }
+    },
+    "/auth/signup": {
+      "post": {
+        "description": "Create a new user account with email and password.",
+        "operationId": "signup",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SignupReqBody"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SignupResBody"
+                }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorModel"
+                }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Sign up",
+        "tags": [
+          "Auth"
         ]
       }
     }
